k8s/governanca-dados-backend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-governanca-dados
  namespace: governanca-dados
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-governanca-dados
    spec:
      containers:
      - name: backend-governanca-dados
        image: harbor.claro.com.br/governanca-dados/governanca-dados-backend-img:v1.0.4
        ports:  #added
          - name: http     #added
            containerPort: 8080 #added
      imagePullSecrets:
      - name: harbor
