k8s/governanca-dados-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-governanca-dados
  namespace: backend-governanca-dados
  selector:
    app: backend-governanca-dados
  ports:
    - protocol: TCP
      port: 8080 #inside the cluster, what port does the service expose?
      targetPort: http
  type: ClusterIP
